--- a/admin/assets/css/style.css
+++ b/admin/assets/css/style.css
@@ -302,12 +302,12 @@ a.article, a.article:hover {
     box-shadow: 2px 2px 8px 1px #ccc;
 }
 .strover{
-    background-color: red;
+    background-color: #c43535;
     color: #fafafa;
     box-shadow: 2px 2px 8px 1px #ccc;
 }
 .sammac{
-    background-color: green;
+    background-color: #11468F;
     color: #fafafa;
     box-shadow: 2px 2px 8px 1px #ccc;
 }
